--- a/src/main/resources/templates/board/list.html
+++ b/src/main/resources/templates/board/list.html
@@ -67,7 +67,8 @@
 <main class="container">
     <div class="bg-body-tertiary p-5 rounded">
         <h1>게시판</h1>
-        <div>총 건수 :<span th:text="${#lists.size(boards)}"></span></div>
+        <!-- <div>총 건수 :<span th:text="${#lists.size(boards)}"></span></div> -->
+        <div>총 건수 :<span th:text="${boards.totalElements}"></span></div>
 
         <table class="table table-striped">
           <thead>
@@ -93,5 +94,19 @@
   </div>
 </main>
     
+<nav aria-label="Page navigation example">
+  <ul class="pagination justify-content-center">
+    <li class="page-item disabled">
+      <a class="page-link">Previous</a>
+    </li>
+    <li class="page-item"><a class="page-link" href="#">1</a></li>
+    <li class="page-item"><a class="page-link" href="#">2</a></li>
+    <li class="page-item"><a class="page-link" href="#">3</a></li>
+    <li class="page-item">
+      <a class="page-link" href="#">Next</a>
+    </li>
+  </ul>
+</nav>
+
   </body>
 </html>
